package pattern;

public interface Product {
    String name();
}
